--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <p>forest</p>
-<embed src="forest.wav" autoplay></embed>
+<embed src="forest.wav"></embed>
     <p>computer keyboard</p>
-    <embed src="computerkeyboard.wav" autoplay></embed>
+    <embed src="computerkeyboard.wav"></embed>
 <p>knocking</p>
-<embed src="myRecording00.wav" autoplay></embed>
+<embed src="myRecording00.wav"></embed>
 </body>
 </html>
